# framework

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  default_service_manager.h  default_view_manager.cpp  default_view_manager.h  framework.kdev4  object_memory_manager_interface.h
.kdev4/: framework.kdev4
definetions/: common_information.cpp  common_information.h  event_information.h  menuitem_event_handler.h  menuitem_information.h  subscriber_information.cpp
interfaces/: authentication_interface.cpp  module_interface.cpp  module_interface.h  service_interface.cpp  service_interface.h  service_manager_interface.cpp  service_manager_interface.h  view_interface.cpp  view_interface.h  view_manager_interface.cpp  view_manager_interface.h
projections/: .CMakeLists.txt.kate-swp  CMakeLists.txt
projections/include/: default_module_manager.h  module_manager_interface.h  public.h
projections/include/definetions/: common_information.h  event_information.h  menuitem_event_handler.h  menuitem_information.h  role.h  subscriber_information.h
projections/include/interfaces/: authentication_interface.h  event_manager_interface.h  module_interface.h  object_memory_manager_interface.h  service_interface.h  service_manager_interface.h  view_interface.h  view_manager_interface.h
projections/src/: default_event_manager.cpp  default_module_manager.cpp  default_module_manager.h  default_service_manager.cpp  default_service_manager.h  default_view_manager.cpp  object_memory_manager_interface.cpp  object_memory_manager_interface.h
projections/src/definetions/: event_information.cpp  menuitem_event_handler.cpp  menuitem_information.cpp  role.cpp  subscriber_information.cpp
projections/src/include/: default_event_manager.h  default_module_manager.h  default_service_manager.h  default_view_manager.h  private.h
projections/src/interfaces/: authentication_interface.cpp  authentication_interface.h  event_manager_interface.cpp  event_manager_interface.h  module_interface.cpp  module_interface.h  service_interface.cpp  service_interface.h  service_manager_interface.cpp  service_manager_interface.h  view_interface.cpp  view_interface.h  view_manager_interface.cpp  view_manager_interface.h
projections/test/main/: main.cpp
src/: default_event_manager.cpp  default_event_manager.h  default_module_manager.cpp  default_module_manager.h  default_service_manager.cpp  default_view_manager.cpp  default_view_manager.h
src/definetions/: event_information.cpp  menuitem_information.cpp  role.cpp  role.h  subscriber_information.cpp  subscriber_information.h
src/interfaces/: authentication_interface.h  event_manager_interface.h  module_interface.h  service_interface.h  view_manager_interface.cpp  view_manager_interface.h
